edited api.yaml, added name search, bugfixes
