# service/api/api-handler.go
@@ -8,6 +8,7 @@ import (
 func (rt *_router) Handler() http.Handler {
 	// Register routes
 	rt.router.POST("/session", rt.wrap(rt.Session))
+	rt.router.GET("/userid/:Username", rt.wrap(rt.GetUserID))
 	rt.router.GET("/users/:UserID", rt.wrap(rt.GetUserProfile))
 	rt.router.PUT("/users/:UserID/name", rt.wrap(rt.ChangeName))
 	rt.router.PUT("/users/:UserID/followed/:OtherUserID", rt.wrap(rt.FollowUser))
